--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -5,56 +6,95 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+env:
+  SSH_USER: root
+  SSH_HOST: 213.239.193.208
+  DOMAIN: docs.ergoplatform.com
+  PROJECT_DIR: /var/www/ergodocs     # mkdocs project root on server
+  PYTHON: python3.11                 # pick the version you prefer (3.10/3.11)
+  JUPYTER_PLATFORM_DIRS: "1"         # silence jupyter notice
+
 jobs:
   build:
+    name: Build site (no strict) and verify assets
     runs-on: ubuntu-latest
-    env:
-      JUPYTER_PLATFORM_DIRS: "1"
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: pip-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
+
       - name: Install deps
+        shell: bash
         run: |
+          set -Eeuo pipefail
           python -m pip install -U pip
           python -m pip install -r requirements.txt
 
-      - name: MkDocs build (strict; show real failures)
+      - name: MkDocs build (no strict; robust logs)
         shell: bash
         run: |
           set -Eeuo pipefail
           trap 'echo "❌ Build failed; last 200 lines:"; tail -n 200 build.log || true' ERR
-
           echo "🏗 mkdocs build -v"
           mkdocs build -v |& tee build.log
           code=${PIPESTATUS[0]}
           echo "mkdocs exit=$code"
-          if [ "$code" -ne 0 ]; then
-            exit "$code"
-          fi
+          [ "$code" -eq 0 ] || exit "$code"
 
-      - name: Upload built site and asset lists
+          echo "ℹ️ Warning summary (non-fatal)"
+          grep -n "WARNING - " build.log || echo "No warnings"
+
+          echo "🔎 Smoke-test built site"
+          test -s site/index.html || { echo "❌ site/index.html missing"; exit 1; }
+
+          JS=$(grep -o 'assets/javascripts/[^"]*' site/index.html | sort -u)
+          CSS=$(grep -o 'assets/stylesheets/[^"]*' site/index.html | sort -u)
+
+          echo "JS assets:"; printf "%s\n" $JS
+          echo "CSS assets:"; printf "%s\n" $CSS
+
+          FAIL=0
+          for f in $JS $CSS; do
+            if [ ! -f "site/$f" ]; then
+              echo "❌ Missing built asset: site/$f"
+              FAIL=1
+            fi
+          done
+          [ "$FAIL" -eq 0 ] || exit 1
+
+          printf "%s\n" $JS > artifact_js.txt
+          printf "%s\n" $CSS > artifact_css.txt
+
+      - name: Upload build outputs (always)
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: site-artifacts
+          name: build-artifacts
           path: |
-            site
+            build.log
             artifact_js.txt
             artifact_css.txt
+            site
 
   deploy:
+    name: Deploy and verify live site
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-        with:
-          name: site-artifacts
-          path: site
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
@@ -62,43 +102,129 @@ jobs:
           key: ${{ secrets.DEPLOY_KEY }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
 
-      - name: Remote build & atomic publish
+      - name: Remote Deploy via SSH (atomic publish + diagnostics)
+        shell: bash
+        env:
+          SSH_USER: ${{ env.SSH_USER }}
+          SSH_HOST: ${{ env.SSH_HOST }}
+          PROJECT_DIR: ${{ env.PROJECT_DIR }}
+          PYTHON: ${{ env.PYTHON }}
+          JUPYTER_PLATFORM_DIRS: ${{ env.JUPYTER_PLATFORM_DIRS }}
         run: |
-          ssh root@213.239.193.208 <<'EOF'
-            set -euo pipefail
-            export JUPYTER_PLATFORM_DIRS=1
-            cd /var/www/ergodocs
+          echo "🚀 Deploy to $SSH_USER@$SSH_HOST ..."
+          ssh "$SSH_USER@$SSH_HOST" bash -s <<'EOF'
+            set -Eeuo pipefail
+            export JUPYTER_PLATFORM_DIRS="${JUPYTER_PLATFORM_DIRS:-1}"
+
+            echo "📂 Confirm project dir"
+            cd "$PROJECT_DIR" || { echo "❌ cd $PROJECT_DIR failed"; exit 1; }
+            pwd
+            echo "🗂 ls -la"
+            ls -la
+
+            echo "🔧 Dev toolchain info"
+            which mkdocs || true
+            mkdocs --version || true
+            which ${PYTHON:-python3} || true
+            ${PYTHON:-python3} --version || true
+
+            echo "🔄 Git pull"
             git stash --include-untracked || true
             git pull --rebase
-            python3 -m venv .venv
+
+            echo "🐍 venv"
+            ${PYTHON:-python3} -m venv .venv
             source .venv/bin/activate
             python -m pip install -U pip
             python -m pip install -r requirements.txt
+
+            echo "🧼 Clean old build dir"
             rm -rf site || true
-            mkdocs build --strict -v
-            # atomic publish: build to tmp then swap
-            ts=$(date +%s)
+
+            echo "🏗 mkdocs build -v"
+            mkdocs build -v
+
+            echo "🔁 Atomic swap to site_live"
             rm -rf site_next && mv site site_next
             rm -rf site_prev || true
             if [ -d site_live ]; then mv site_live site_prev; fi
             mv site_next site_live
             ln -sfn site_live site
+
+            echo "👀 Path sanity"
+            echo "site symlink ->"; readlink -f site || true
+            echo "tree depth"
+            find site_live -maxdepth 2 -type d -printf "%p\n" | head -n 20
+
+            echo "🔑 Ownership and perms"
+            id || true
+            # adjust if your web user differs (www-data for Nginx, caddy for Caddy)
+            if id www-data >/dev/null 2>&1; then chown -R www-data:www-data site_live || true; fi
+            if id caddy >/dev/null 2>&1; then chown -R caddy:caddy site_live || true; fi
+            find site_live -maxdepth 2 -type d -printf "%M %u:%g %p\n" | head -n 10
+
+            echo "🧩 Web server detection"
+            if command -v nginx >/dev/null 2>&1; then
+              echo "🌐 Nginx present"
+              nginx -v || true
+              echo "🧪 nginx -t"
+              nginx -t || { echo "❌ nginx -t failed"; exit 1; }
+              echo "📄 nginx -T (print config)"
+              nginx -T | sed -n '1,200p'
+              echo "🔎 Grep server block for domain"
+              nginx -T | grep -A3 -B3 -n "server_name.*${DOMAIN}" || true
+              echo "🔁 Reload Nginx"
+              systemctl reload nginx || true
+              echo "🗒 nginx status (tail)"
+              systemctl status nginx --no-pager -l | tail -n 50 || true
+            elif command -v caddy >/dev/null 2>&1; then
+              echo "🌐 Caddy present"
+              caddy version || true
+              echo "📄 Caddyfile"
+              if [ -f /etc/caddy/Caddyfile ]; then sed -n '1,200p' /etc/caddy/Caddyfile; fi
+              echo "🔁 Reload Caddy"
+              systemctl reload caddy || true
+              echo "🗒 caddy status (tail)"
+              systemctl status caddy --no-pager -l | tail -n 50 || true
+            else
+              echo "ℹ️ No nginx or caddy found in PATH"
+            fi
+
+            echo "🔍 Local HTTP sanity"
+            curl -s -I http://127.0.0.1/ | sed -n '1,20p' || true
+            echo "🔍 Serve check for /index.html on loopback"
+            # adjust root path if your server block uses a different root
+            test -f site_live/index.html && head -n 5 site_live/index.html || true
           EOF
 
-      - name: Verify HTML and assets served (fail if any 404)
+      - name: Verify Remote Site Files
+        shell: bash
+        env:
+          SSH_USER: ${{ env.SSH_USER }}
+          SSH_HOST: ${{ env.SSH_HOST }}
+          PROJECT_DIR: ${{ env.PROJECT_DIR }}
         run: |
-          set -euo pipefail
-          BASE="https://docs.ergoplatform.com"
-          # cache-bust HTML
-          echo "🔎 Fetching homepage HTML"
+          echo "🔍 Recently updated files on server"
+          ssh "$SSH_USER@$SSH_HOST" "find '$PROJECT_DIR/site' -type f -printf '🕒 %TY-%Tm-%Td %TH:%TM:%TS %p\n' | sort -r | head -n 12 || true"
+
+      - name: Verify HTML and assets served (no-cache)
+        shell: bash
+        env:
+          DOMAIN: ${{ env.DOMAIN }}
+        run: |
+          set -Eeuo pipefail
+          BASE="https://${DOMAIN}"
+
+          echo "🔎 Fetch live homepage HTML"
           curl -fsS -H 'Cache-Control: no-cache' "$BASE/" > /tmp/home.html
-          # extract the JS/CSS actually referenced by the live HTML
+
+          grep -q "</html>" /tmp/home.html || { echo "❌ Live HTML incomplete"; exit 1; }
+
+          echo "🔎 Extract asset URLs from live HTML"
           LIVE_JS=$(grep -o 'assets/javascripts/[^"]*' /tmp/home.html | sort -u)
           LIVE_CSS=$(grep -o 'assets/stylesheets/[^"]*' /tmp/home.html | sort -u)
-          echo "JS from live HTML:"; printf "%s\n" $LIVE_JS
-          echo "CSS from live HTML:"; printf "%s\n" $LIVE_CSS
 
-          echo "✅ Checking each asset returns 200"
+          echo "✅ Check each asset returns 200"
           FAIL=0
           for f in $LIVE_JS $LIVE_CSS; do
             url="$BASE/$f"
@@ -106,7 +232,22 @@ jobs:
             echo "$code $url"
             [ "$code" = "200" ] || FAIL=1
           done
-          [ "$FAIL" -eq 0 ] || { echo "❌ One or more assets failed to serve 200"; exit 1; }
+          [ "$FAIL" -eq 0 ] || { echo "❌ One or more assets failed to serve 200 (possible blank page)"; exit 1; }
 
           echo "🧪 Smoke-check a content page"
           curl -fsS -H 'Cache-Control: no-cache' "$BASE/faq/" | grep -q "</html>" || { echo "❌ FAQ page did not return valid HTML"; exit 1; }
+
+      - name: Show cache headers for HTML vs assets
+        shell: bash
+        env:
+          DOMAIN: ${{ env.DOMAIN }}
+        run: |
+          set -Eeuo pipefail
+          BASE="https://${DOMAIN}"
+          echo "# HTML headers"
+          curl -s -I -H 'Cache-Control: no-cache' "$BASE/" | sed -n '1,25p'
+          echo "# Asset headers (pick first js/css)"
+          js=$(curl -s "$BASE/" | grep -o 'assets/javascripts/[^"]*' | head -n1)
+          css=$(curl -s "$BASE/" | grep -o 'assets/stylesheets/[^"]*' | head -n1)
+          if [ -n "$js" ]; then curl -s -I "$BASE/$js" | sed -n '1,25p'; fi
+          if [ -n "$css" ]; then curl -s -I "$BASE/$css" | sed -n '1,25p'; fi
