--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,7 +73,7 @@ plugins:
   - render_swagger:
       allow_arbitrary_locations: true
   - neoteroi.mkdocsoad
-  - mkdocs-jupyter
+  #- mkdocs-jupyter
   #- section-index
   # Removed section-index to avoid nav assertion; Material's navigation.indexes covers the behavior
   #- awesome-pages
