disabling custom JS test

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,8 +50,8 @@ extra_css:
 
 extra_javascript:
   - assets/extra.js
-  - assets/mathjax.js
-  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+  #- assets/mathjax.js
+  #- https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - https://unpkg.com/mermaid@8.5.1/dist/mermaid.min.js
